fixed the REI map widget, also fixed some wrapping

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -153,6 +153,11 @@
   height: 100%;
 }
 
+#map {
+  width: 100%;
+  height: 100%;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
