--- a/src/styles/trail-tile.css
+++ b/src/styles/trail-tile.css
@@ -48,6 +48,7 @@
   top: -15px;
   padding-left: 15px;
   font-size: 15px;
+  width: 100px;
 }
 
 .condition-square {
